# r-place

./: README.md
client/: .eslintrc.json  globaldata.js  package-lock.json  package.json
client/components/: Canvas.js  Canvas.module.css  Discription.js  Header.js  Header.module.css  Login.js  Palette.js  Pallete.js  Pods.js  Sidebar.js
client/components/layouts/: hostel_layout.js
client/components/skeletons/: HostelFloor.js  HostelMap.js  PlaceCanvas.js  Room.js
client/pages/: _app.js  hostelMap.js  index.js  place.js
client/pages/api/auth/: [...nextauth].js
client/pages/hostels/: index.js  temp.js
client/pages/hostels/[hostel]/: index.js
client/pages/hostels/[hostel]/[floor]/: [room].js  index.js  index.module.css
client/styles/: Hostels.module.css  globals.css
parse_responses/: .gitignore  parse_img_rollno.py  parse_responses.py
server/: pyproject.toml
server/server/: .gitignore  auth.py  env.example  grid.py  hostel.py  main.py  queries.sql  utils.py
server/server/db/: schema.sql
server/server/queries/: common.sql  grid.sql  hostel.sql
