[tool.poetry]
name = "server"
version = "0.1.0"
description = "Backend for r/place"
authors = ["Rachit Keerti Das <rachitkdas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
google-auth = "^2.17.1"
requests = "^2.28.2"
pydantic = "^1.10.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
